- Fixed bug #51608 (pg_copy_to: WARNING: nonstandard use of \\ in a string literal) Patch by: cbandy at jbandy dot com

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@298210 c90b9560-bf6c-de11-be94-00142212c4b1